[package]
name = "schnorpy"
version = "0.1.0"
authors = ["holygits <beauchjord@gmail.com>"]
edition = "2018"

[dependencies]
"schnorrkel" = "0.1.1"
"substrate-primitives" = { git = "https://github.com/paritytech/substrate" }

[lib]
name = "schnorpy"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.7.0-alpha.1"
features = ["extension-module"]
